[gd_scene load_steps=10 format=3 uid="uid://cymio5oinv5aj"]

[ext_resource type="Script" path="res://Stages/Scenes/main_menu.gd" id="1_hxsfu"]
[ext_resource type="Texture2D" uid="uid://brgkq2elkmg4v" path="res://Assets/Ui/Art/BackGround.png" id="1_q8bqy"]
[ext_resource type="Texture2D" uid="uid://dqho3lgvkhywd" path="res://Assets/Ui/Buttons/blue_button04.png" id="2_cj7qg"]
[ext_resource type="Texture2D" uid="uid://b14gs504j8f6o" path="res://Assets/Ui/Buttons/blue_button05.png" id="3_hem7i"]
[ext_resource type="FontFile" uid="uid://cgdbdkkr85xtx" path="res://Assets/Fonts/kenvector_future_thin.ttf" id="4_df4v8"]
[ext_resource type="Texture2D" uid="uid://5qtc013wpa4d" path="res://Assets/Ui/Buttons/red_button01.png" id="5_tnqyb"]
[ext_resource type="Texture2D" uid="uid://dnau4x1kvwq4t" path="res://Assets/Ui/Buttons/red_button00.png" id="6_8hgyu"]
[ext_resource type="Texture2D" uid="uid://dxvi7wyygyn2g" path="res://Assets/Ui/Buttons/yellow_button04.png" id="7_xs8v1"]
[ext_resource type="Texture2D" uid="uid://tmdeqgd8ul2o" path="res://Assets/Ui/Buttons/yellow_button05.png" id="8_w1usp"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hxsfu")

[node name="B" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_q8bqy")
expand_mode = 5

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.996593)
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VB" type="VBoxContainer" parent="M"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = -16
alignment = 1

[node name="Start" type="TextureButton" parent="M/VB"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
disabled = true
texture_normal = ExtResource("2_cj7qg")
texture_pressed = ExtResource("3_hem7i")
texture_disabled = ExtResource("3_hem7i")
stretch_mode = 3

[node name="Label" type="Label" parent="M/VB/Start"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -13.0
offset_right = 42.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99752, 0.861187)
theme_override_colors/font_shadow_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0, 0.0588235, 0.196078, 1)
theme_override_fonts/font = ExtResource("4_df4v8")
text = "Start Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="TextureButton" parent="M/VB"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
texture_normal = ExtResource("2_cj7qg")
texture_pressed = ExtResource("3_hem7i")
stretch_mode = 3

[node name="Label" type="Label" parent="M/VB/Quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -13.0
offset_right = 42.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99752, 0.861187)
theme_override_colors/font_shadow_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0, 0.0588235, 0.196078, 1)
theme_override_fonts/font = ExtResource("4_df4v8")
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="M/VB"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="Easy" type="TextureButton" parent="M/VB"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
texture_normal = ExtResource("2_cj7qg")
texture_pressed = ExtResource("3_hem7i")
stretch_mode = 3

[node name="Label" type="Label" parent="M/VB/Easy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -13.0
offset_right = 42.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99752, 0.861187)
theme_override_colors/font_shadow_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0, 0.0588235, 0.196078, 1)
theme_override_fonts/font = ExtResource("4_df4v8")
text = "Sunny day"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Medium" type="TextureButton" parent="M/VB"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
texture_normal = ExtResource("7_xs8v1")
texture_pressed = ExtResource("8_w1usp")
stretch_mode = 3

[node name="Label" type="Label" parent="M/VB/Medium"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -13.0
offset_right = 42.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.99752, 0.861187)
theme_override_colors/font_shadow_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0, 0.0588235, 0.196078, 1)
theme_override_fonts/font = ExtResource("4_df4v8")
text = "Mild Afternoon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hard" type="TextureButton" parent="M/VB"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
texture_normal = ExtResource("5_tnqyb")
texture_pressed = ExtResource("6_8hgyu")
stretch_mode = 3

[node name="Label" type="Label" parent="M/VB/Hard"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -13.0
offset_right = 42.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00335, 0.861187)
theme_override_colors/font_shadow_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_colors/font_outline_color = Color(0, 0.0588235, 0.196078, 1)
theme_override_fonts/font = ExtResource("4_df4v8")
text = "Intense Night"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="M/VB/Start" to="." method="_on_start_level_button_pressed"]
[connection signal="pressed" from="M/VB/Quit" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="M/VB/Easy" to="." method="_on_level_selection_button" binds= [1]]
[connection signal="pressed" from="M/VB/Medium" to="." method="_on_level_selection_button" binds= [2]]
[connection signal="pressed" from="M/VB/Hard" to="." method="_on_level_selection_button" binds= [3]]
